--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "url": "https://github.com/Inniums/backend-freecodeCamp/issues"
   },
   "homepage": "https://github.com/Inniums/backend-freecodeCamp#readme",
-	"dependencies": {
-		"body-parser": "^2.0.1",
-		"cors": "^2.8.5",
-		"dotenv": "^8.2.0",
-		"express": "^5.0.0",
-		"mongodb": "^6.8.1",
-		"mongoose": "^8.6.0"
-	}
+  "dependencies": {
+    "body-parser": "^2.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^5.0.0",
+    "mongodb": "^6.8.1",
+    "mongoose": "^8.6.0",
+    "multer": "^1.4.5-lts.1"
+  }
 }
